--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "msw": "^0.39.2",
     "postcss": "^8.4.8",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
