--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8090",
+    "dev": "NEXT_PUBLIC_API_MOCKING=enabled next dev -p 8090",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,5 +25,8 @@
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
