--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NEXT_PUBLIC_API_MOCKING=enabled next dev -p 8090",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
@@ -29,6 +29,10 @@
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "msw": {
     "workerDirectory": "public"
