--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "serverless-mysql": "^1.5.4",
     "swr": "^1.3.0"
   },
   "devDependencies": {
