--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.38.0",
     "serverless-mysql": "^1.5.4",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
