--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NEXT_PUBLIC_API_MOCKING=enabled next dev -p 8090",
-    "build": "next build --no-lint",
-    "start": "next start",
+    "dev": "NEXT_PUBLIC_API_MOCKING=enabled&NEXT_PUBLIC_API_URL=http://localhost:3000 next dev",
+    "build": "NEXT_PUBLIC_API_URL=http://localhost:3000 next build --no-lint",
+    "start": "NEXT_PUBLIC_API_URL=http://localhost:3000 next start",
     "lint": "next lint"
   },
   "dependencies": {
